# meta-writer

./: .gitignore  Cargo.toml  Makefile  README.md  packager.sh
pkg/: index.js  loader.js  meta-writer.wasm  package-lock.json  package.json
playground/lofty-test/: .gitignore  Cargo.toml
playground/lofty-test/src/: main.rs
playground/node-test/: index.js  package-lock.json  package.json
samples/: service-login.m4a
src/: main.rs
tools/: package.json  packager.js
