[package]
name = "lofty-wasm"
version = "0.1.0"
authors = ["Alessio Orsini <35498861+orsett0@users.noreply.github.com>"]
edition = "2018"
description = "Tool to add metadata to media files using lofty-rs, compiled to WASM"
license = ""
publish = false

[dependencies]
wasm-bindgen = "0.2.84"
lofty = "0.14.0"
structopt = "0.3"
phf = { version = "0.11.2", features = ["macros"] }
json = "0.12.4"
